# statistics-dirichlet

./: LICENSE  dirichlet.cabal  statistics-dirichlet.cabal
Math/Statistics/: Dirichlet.hs
Math/Statistics/Dirichlet/: Density.hs  Matrix.hs  Mixture.hs  Options.hs  Util.hs
src/Math/Statistics/: Dirichlet.hs
src/Math/Statistics/Dirichlet/: Density.hs  Matrix.hs  Mixture.hs  Options.hs  Util.hs
