Cabal-Version:       >= 1.2
Build-Type:          Simple
Tested-With:         GHC
Category:            Math
Name:                statistics-dirichlet
Version:             0.4
Stability:           experimental
License:             GPL
License-File:        LICENSE
Copyright:           (c) 2009 Felipe A. Lessa
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Synopsis:            Functions for working with Dirichlet densities and
		     Dirichlet mixtures on vectors.
Description:
    TODO

Library
  Build-Depends:
    base >= 3 && < 5, hmatrix >= 0.1 && < 0.9, vector == 0.5.*, parallel >= 1.0 && < 1.2
  Ghc-Options: -Wall -O2
  Extensions: BangPatterns, FlexibleContexts
  Exposed-Modules:
    Math.Statistics.Dirichlet,
    Math.Statistics.Dirichlet.Density,
    Math.Statistics.Dirichlet.Matrix,
    Math.Statistics.Dirichlet.Mixture,
    Math.Statistics.Dirichlet.Options,
    Math.Statistics.Dirichlet.Util
