Cabal-Version:       >= 1.2
Build-Type:          Simple
Tested-With:         GHC
Category:            Math
Name:                statistics-dirichlet
Version:             0.5
Stability:           experimental
License:             GPL
License-File:        LICENSE
Copyright:           (c) 2009 Felipe A. Lessa
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Synopsis:            Functions for working with Dirichlet densities and
		     Dirichlet mixtures on vectors.
Description:
    TODO

Library
  Build-Depends:
    base >= 3 && < 5, hmatrix >= 0.1 && < 0.9, vector == 0.5.*,
    deepseq == 1.1.*, nonlinear-optimization == 0.3.*
  Ghc-Options: -Wall -O2
  Extensions: BangPatterns, NamedFieldPuns, RecordWildCards, FlexibleContexts
  Exposed-Modules:
    Math.Statistics.Dirichlet,
    Math.Statistics.Dirichlet.Density,
    Math.Statistics.Dirichlet.Matrix,
    Math.Statistics.Dirichlet.Mixture,
    Math.Statistics.Dirichlet.Options,
    Math.Statistics.Dirichlet.Util
