Cabal-Version:       >= 1.6
Build-Type:          Simple
Tested-With:         GHC
Category:            Math
Name:                statistics-dirichlet
Version:             0.5
Stability:           experimental
License:             GPL
License-File:        LICENSE
Copyright:           (c) 2009 Felipe A. Lessa
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Synopsis:            Functions for working with Dirichlet densities and
		     Dirichlet mixtures on vectors.
Description:
    TODO

Flag old_hmatrix
  Description: Use hmatrix versions prior to 0.9
  Default: False

Library
  Build-Depends:
    base >= 3 && < 5,  vector >= 0.5 && < 0.7,
    deepseq == 1.1.*, nonlinear-optimization == 0.3.*
  if flag(old_hmatrix)
    Build-Depends: hmatrix >= 0.1 && < 0.9
  else
    Build-Depends: hmatrix-special == 0.1.*
  Ghc-Options: -Wall
  Extensions: BangPatterns, NamedFieldPuns, RecordWildCards, FlexibleContexts
  Exposed-Modules:
    Math.Statistics.Dirichlet,
    Math.Statistics.Dirichlet.Density,
    Math.Statistics.Dirichlet.Matrix,
    Math.Statistics.Dirichlet.Mixture,
    Math.Statistics.Dirichlet.Options,
    Math.Statistics.Dirichlet.Util
  hs-Source-Dirs: src/
