Cabal-Version:       >= 1.6
Build-Type:          Simple
Tested-With:         GHC
Category:            Math
Name:                statistics-dirichlet
Version:             0.6
Stability:           experimental
License:             GPL
License-File:        LICENSE
Copyright:           (c) 2009 Felipe A. Lessa
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Synopsis:            Functions for working with Dirichlet densities and mixtures on vectors.
Description:
    TODO

Library
  Build-Depends:
      base                   == 4.*
    , deepseq                == 1.3.*
    , vector                 == 0.9.*
    , nonlinear-optimization == 0.3.*
    , hmatrix-special        == 0.1.*

  Ghc-Options: -Wall
  Extensions: BangPatterns, NamedFieldPuns, RecordWildCards, FlexibleContexts
  Exposed-Modules:
    Math.Statistics.Dirichlet,
    Math.Statistics.Dirichlet.Density,
    Math.Statistics.Dirichlet.Matrix,
    Math.Statistics.Dirichlet.Mixture,
    Math.Statistics.Dirichlet.Options,
    Math.Statistics.Dirichlet.Util
  hs-Source-Dirs: src/
